fixed align of buttons in options

--- a/chromium/pages/options/options.css
+++ b/chromium/pages/options/options.css
@@ -61,7 +61,7 @@ input[type="checkbox"] {
 }
 
 .even {
-    padding-top: 21px;
+    padding-top: 27px;
 }
 
 .list {
